# DarkAlpha

./: .env.example  .gitignore  DARKALPHA_30_DAY_ROADMAP.md  README.md  docker-compose.yml  pyproject.toml
dark-alpha-auto-execution/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
dark-alpha-auto-execution/.github/workflows/: ci.yml
dark-alpha-auto-execution/config/: breakers.yaml  main.yaml  risk_gate.yaml  sizer.gate1.yaml  sizer.gate2.yaml  sizer.gate3.yaml  validator.yaml
dark-alpha-auto-execution/docs/: audit-followups.md  burn-in-2026-04-28T032621Z-addendum.md  burn-in-2026-04-30T042100Z-addendum.md  burn-in-2026-05-02T135921Z-addendum.md  burn-in-runbook.md  dashboard-runbook.md  dashboard-soak-test.md  first-canary-checklist.md  gate-2-authorization-template.md  gate-2-authorization.md  gate-2-testnet-runbook.md  gate-6-4-to-6-8-runbook.md  gate-6-authorization-template.md  gate-6-authorization.md  gate-6-micro-live-runbook.md  live-broker-spec.md  phase-0-completion-report.md  phase-4-operations.md  phase-8-telegram.md  shadow-mode-report-template.md  week-4-closeout.md
dark-alpha-auto-execution/docs/burn-in-2026-04-26T164808Z/: INVALID.md  report.md  snapshot-001.md  snapshot-002.md  snapshot-003.md  snapshot-004.md  snapshot-005.md  snapshot-006.md  snapshot-007.md  snapshot-008.md  snapshot-009.md  snapshot-010.md  snapshot-011.md  snapshot-012.md  snapshot-013.md  snapshot-014.md  snapshot-015.md  snapshot-016.md  snapshot-017.md  snapshot-018.md  snapshot-019.md  snapshot-020.md  snapshot-021.md  snapshot-022.md  snapshot-023.md  snapshot-024.md
dark-alpha-auto-execution/reports/: gate2-01KQ488Q086P7BFQ26JP1JMRMM.md  gate6-closeout-BTCUSDT-20260426T092604Z.md  gate6-closeout-BTCUSDT-20260426T093302Z.md  gate6-closeout-BTCUSDT-20260426T093509Z.md  gate6-closeout-BTCUSDT-20260426T094245Z.md  gate6-closeout-BTCUSDT-20260426T094402Z.md  gate6-closeout-BTCUSDT-20260426T094525Z.md  gate6-closeout-BTCUSDT-20260426T094640Z.md  gate6-closeout-BTCUSDT-20260426T094806Z.md  gate6-closeout-BTCUSDT-20260426T142928Z.md
dark-alpha-auto-execution/scripts/: burn-in.sh  com.darkalpha.daily-snapshot.plist  kill_switch_test.sh  run_dashboard.sh  start-all.sh
dark-alpha-auto-execution/src/: bootstrap.py
dark-alpha-auto-execution/src/backtest/: __init__.py  (+1 more)
(+172 files in other folders)
