[tool.poetry]
name = "darkalphaphaseone"
version = "0.1.0"
description = "Binance USDT-M futures signal proposal card MVP"
authors = ["DarkAlpha <dev@example.com>"]
readme = "README.md"
packages = [{ include = "dark_alpha_phase_one", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
